--- a/backend 11.25.50 AM/package.json
+++ b/backend 11.25.50 AM/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "pg-promise": "^8.6.5"
   },
   "devDependencies": {},
   "scripts": {
